# SCTP-in-Haskell

./: .gitignore  SCTP-Haskell.cabal  streamio.hs
report/: mkpresentatie  mkversl  moreverb.dtx  verslag.bib  verslag.tex
report/examples/: syslogserver.hs
report/tex/: conclusion.tex  goals.tex  inleiding.tex  introduction.tex  io-styles.tex  process.tex  quote.tex  related-work.tex  technologies.tex  testing.tex  title.tex
sctp/: monadic.hs  network-socket.hs  network.hs  send_string.hs  socket.hs  streams.hs  types.hs  utils.hs
sctp/socket/: monadic.hs  streams.hs  timer.hs  types.hs  utils.hs
sctp/streams/: action.hs  event.hs  state.hs  types.hs  utils.hs
sctp/test/: test-types.hs
verslag/: .gitignore  make  mystyle.sty  synttree.dtx  verslag.bib  verslag.tex  verslag.toc
verslag/examples/: async.hs  header.hs  streamio.hs
verslag/examples/sctp/: socket.hs  types.hs
verslag/tex/: design.tex  goals.tex  inleiding.tex  io-styles.tex  process.tex  title.tex
